# Mathematik

./: .gitignore  README.md
Analysis/: AGM.json  Bisektion.json  BrentSalamin.json  Collatz.json  Euklid.json  MySqrtRegula.json  Newton.json  Quadratwurzel.json
Analysis/src/: Function.java  IterationsVerfahren1D.java  Log4.java  NullstellenAlgorithmus.java  overview.html  rekursion7.java
Analysis/src/LogistischeGleichung/: LogistischeGleichung.java  LogistischeGleichungMain.java
Analysis/src/agm/: AGM.java  AGMMain.java
Analysis/src/archimedes/: Archimedes.java
Analysis/src/bisektion/: BisektionMain.java  CubicFunction.java
Analysis/src/brentSalamin/: BrentSalamin.java  BrentSalaminMain.java
Analysis/src/euklid/: Euklid.java  EuklidMain.java
Analysis/src/newton/: Newton.java
Analysis/src/quadratwurzel/: MySqrtBisekt.java  MySqrtNewton.java
Analysis/src/regulaFalsi/: RegulaFalsi.java
CC/: .gitignore
CC/MonteCarlo/importance_malley/: CMakeLists.txt  CMakeOptions.txt  importanceBRDF.cpp  malleyTesting.cpp
CC/Trigonometrie/: atan2_atan.cpp
CC/Visualisieren/Eulerwinkel/: CMakeLists.txt  eulerEngine.cpp  eulerEngine.h  openGLmain.cpp
CC/Visualisieren/Raumwinkel/: CMakeLists.txt  Shape.cpp  Shape.h  main.cpp  vlgSphere.cpp  vlgSphere.h
CC/Zufallszahlen/FairerWürfel/: CMakeLists.txt  buildtype.txt  fair.cpp
CC/Zufallszahlen/unfairerWürfel/: CMakeLists.txt  unfair.cpp
Java/Analysis/: Archimedes.json  Archimedes.out  EuklidCount.json  LogistischeGleichung.json  MySqrtNewton.json  RegulaFalsi.json
Java/Analysis/src/: Dubletten.java  (+5 more)
Java/MatheGrundlagen/: .gitignore  Affine.in  BitStrings.in  Diffie.in  Digits.json  Dijkstra.in  Euler.in  RSA.in  Shift.in  Undirected.in  caesar.in  mathebuch.in  meetyouinthepark_k3.in  schubert.in  slide.in  unconnected.in
MatheGrundlagen/src/: log4j2.xml
Python/: .gitignore
Python/Analysis/: cubicPolys.py  functionsVispy.py  gogoScaleVis.py
Python/LineareAlgebra/: lgssolve.py  quaternionen.py
Python/Optimierung/: NewtonExample.py  nelderMeadExample.py  quadratic.py  tncExample.py
Python/Optimization/: DiscreteNewtonExample.py  NewtonExample.py  bfgs.py  brentExample.py  paraExample.py  quadratic.py  tncExample.py
R/: .gitignore
Stochastik/: loadedData.txt
Stochastik/src/: BlindDiceExperiment.java  CircleIntersection.java  CoinExperiment.java  CongruentalMain.java  Experiment.java  FirstApacheRandom.java  LinearCongruentalGenerator.java  Loaded.java  LottozahlenErwartung.java  MCPiMeans.java  MCPiOneRun.java  MC_Pi.java  PKWSimulation.java  TafelExperiment.java  ThrowCoinRandom.java  ThrowCoinTwister.java  TwoDiesAbstract.java  TwoDiesCongruental.java  TwoDiesTwister.java  VonNeumann.java  VonNeumannMain.java  firstDice.java
(+176 files in other folders)
